--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.47",
-    "@mui/material": "^5.0.0",
-    "@mui/styles": "^5.0.0",
-    "@mui/system": "^5.0.0",
+    "@mui/material": "^5.14.17",
+    "@mui/styles": "^5.14.17",
+    "@mui/system": "^5.14.17",
+    "@mui/utils": "^5.14.17",
+    "@mui/x-date-pickers": "^6.18.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.4",
+    "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.10.0",
     "web-vitals": "^1.0.1"
   },
